# event-impact-model

./: .gitignore  LICENSE  Makefile  README.md  RESEARCH_MEMO.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
data/raw/: universe_sec_2026-02-09.csv  universe_sec_2026-02-10.csv  universe_sec_2026-02-11.csv  universe_sec_2026-02-12.csv
reports/: REPORT.md  backtest_costed_daily.csv  backtest_costed_eventlevel_monthly.csv  backtest_costed_eventlevel_overall.csv  backtest_costed_sensitivity.csv  backtest_engine_daily.csv  backtest_engine_daily_vt10.csv  backtest_engine_sensitivity.csv  backtest_engine_summary.csv  backtest_engine_summary_vt10.csv  backtest_oos_daily.csv  backtest_oos_eventlevel_monthly.csv  backtest_oos_eventlevel_overall.csv  event_study_robustness.csv  event_study_summary.csv  robustness_sanity.csv  robustness_subsamples.csv  robustness_within_day_shuffle.csv
scripts/: 01_fetch_universe_sec.py  02_fetch_prices.py  03_fetch_events.py  04_event_study_mvp.py  05_event_study_robustness.py  06_build_model_dataset.py  07_train_cv_baselines.py  07b_train_cv_lgbm.py  08_backtest_oos.py  08b_backtest_oos_eventlevel.py  09_backtest_costed.py  10_backtest_engine.py  10b_backtest_engine_sensitivity.py  11_build_report.py  12_robustness_sanity.py  13_robustness_subsamples.py  14_robustness_within_day_shuffle.py  run_all.py
src/event_impact_model/backtest/: engine.py
src/event_impact_model/cv/: purged.py
src/event_impact_model/utils/: calendars.py  dates.py  io.py  log.py
tests/: test_smoke_e2e.py  test_unit_dates.py
tests/fixtures/: events_sample.parquet  prices_sample.parquet
