[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-impact-model"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",

  "requests>=2.31",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "python-dateutil>=2.8",
  "pytz>=2024.1",

  "pandas-market-calendars>=4.4",

  "lxml>=4.9",
  "beautifulsoup4>=4.12",

  "scikit-learn>=1.3",
  "scipy>=1.10",
  "lightgbm>=4.0",

  "matplotlib>=3.8",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=7.0",
  "build>=1.0",
  "mypy>=1.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["event_impact_model*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
